# gemini-cv-to-json

./: Dockerfile.dev  index.html  mapapp-218917-5417a7ff2da1.json  pyproject.toml
hello_world/: main.py  prompt.py
